Fixed X overflow and Image tab issue

--- a/search_frontend/src/pages/SearchPage.css
+++ b/search_frontend/src/pages/SearchPage.css
@@ -127,8 +127,7 @@
     position: relative;
     vertical-align: top;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    align-items: center;
-    justify-content: center;
+    
     white-space: normal;
     width: 100%;
 }
